--- a/labs/w01_intro.ipynb
+++ b/labs/w01_intro.ipynb
@@ -57,15 +57,17 @@
     "#### Example\n",
     "The project \"WHO Coronavirus (COVID-19) Dashboard\"\n",
     "\n",
-    "<img src=\"../img/who_covid.png\"/>\n",
+    "<img src=\"../img/who_covid.png\" width = 70%/>\n",
     "\n",
     "-   **Substantive**\n",
+    "\n",
     "    -   `Title`: WHO Coronavirus (COVID-19) Dashboard\n",
     "    -   `Author`: World Health Organization\n",
     "    -   `Big idea`: Shows confirmed COVID-19 cases and deaths by country to date\n",
     "    -   `Message`: The project displays a map of the world where COVID-19 cases are shown by country. This element is used to show which countries have had more cases (large trends). A drop down button allows us to visualise the map by a) Total per 100,000 population b) % change in the last 7 days c) newly reported in the last 7 days d) newly reported in the last 24 hours.\n",
     "\n",
     "-   **Technical**\n",
+    "  \n",
     "    -   `URL`: [`https://covid19.who.int/`](https://covid19.who.int/)\n",
     "    -   `Interactivity`: Yes\n",
     "    -   `Zoomable`: Yes\n",
@@ -87,6 +89,7 @@
     "### Class discussion\n",
     "\n",
     "We will select a few examples posted and collectively discuss (some of) the following questions:\n",
+    "\n",
     "1.  What makes them powerful, what \"speaks\" to us?\n",
     "2.  What could be improved, what is counter-intuitive?\n",
     "3.  What design elements do they rely on?\n",
@@ -106,7 +109,7 @@
    "source": [
     "## Part II: Python/Pandas (Refresher)\n",
     "\n",
-    "*Gabriele Filomena has readapted this section of the Notebook from material shared on this [repository](https://github.com/gboeing/ppd599/tree/main).\n",
+    "*Gabriele Filomena has prepared this notebook by readapting material shared on this [repository](https://github.com/gboeing/ppd599/tree/main).\n",
     "Copyright (c) 2013-2023 Geoff Boeing.*"
    ]
   },
@@ -4486,7 +4489,7 @@
    "source": [
     "## Part III: Geospatial Vector data in Python\n",
     "\n",
-    "*Gabriele Filomena has readapted the Notebook from material shared on this [repository](https://github.com/jorisvandenbossche/geopandas-tutorial).\n",
+    "*Gabriele Filomena has prepared this notebook by readapting material shared on this [repository](https://github.com/jorisvandenbossche/geopandas-tutorial).\n",
     "Copyright (c) 2018, Joris Van den Bossche.*"
    ]
   },
@@ -4956,7 +4959,7 @@
     "\n",
     "Spatial **vector** data can consist of different types, and the 3 fundamental types are:\n",
     "\n",
-    "<img src=../img/simple_features_3_text.svg/>\n",
+    "<img src=\"../img/simple_features_3_text.svg\" width=\"70%\">\n",
     "\n",
     "* **Point** data: represents a single point in space.\n",
     "* **Line** data (\"LineString\"): represents a sequence of points that form a line.\n",
@@ -5753,7 +5756,7 @@
    "id": "326ed7aa",
    "metadata": {},
    "source": [
-    "*Gabriele Filomena has readapted the Notebook from material shared on this [repository](https://github.com/jorisvandenbossche/geopandas-tutorial).\n",
+    "*Gabriele Filomena has prepared this notebook by readapting material shared on this [repository](https://github.com/jorisvandenbossche/geopandas-tutorial).\n",
     "Copyright (c) 2018, Joris Van den Bossche.*"
    ]
   },
@@ -5817,7 +5820,7 @@
     "Although the earth is a globe, in practice we usually represent it on a flat surface: think about a physical map, or the figures we have made with Python on our computer screen.\n",
     "Going from the globe to a flat map is what we call a *projection*.\n",
     "\n",
-    "<img src=../img/projection.png/>\n",
+    "<img src=\"../img/projection.png\" width = 70%>\n",
     "\n",
     "We project the surface of the earth onto a 2D plane so we can express locations in cartesian x and y coordinates, on a flat surface. In this plane, we then typically work with a length unit such as meters instead of degrees, which makes the analysis more convenient and effective.\n",
     "\n",
@@ -5826,11 +5829,11 @@
     "Some projection systems will try to preserve the area size of geometries, such as the Albers Equal Area projection. Other projection systems try to preserve angles, such as the Mercator projection, but will see big distortions in the area. Every projection system will always have some distortion of area, angle or distance.\n",
     "\n",
     "<table><tr>\n",
-    "<td> <img src=../img/projections-AlbersEqualArea.png/> </td>\n",
-    "<td> <img src=../img/projections-Mercator.png/> </td>\n",
+    "<td> <img src=\"../img/projections-AlbersEqualArea.png\"> </td>\n",
+    "<td> <img src=\"../img/projections-Mercator.png\"> </td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td> <img src=../img/projections-Robinson.png/> </td>\n",
+    "<td> <img src=\"../img/projections-Robinson.png\"> </td>\n",
     "</tr></table>"
    ]
   },
@@ -5840,7 +5843,7 @@
    "metadata": {},
    "source": [
     "**Projected size vs actual size (Mercator projection)**:\n",
-    "<img src=../img/mercator_projection_area.gif/>"
+    "<img src=\"../img/mercator_projection_area.gif\">"
    ]
   },
   {
