--- a/labs/w01_intro.ipynb
+++ b/labs/w01_intro.ipynb
@@ -820,7 +820,7 @@
     "# load a data file\n",
     "# note the relative filepath! where is this file located?\n",
     "# use dtype argument if you don't want pandas to guess your data types\n",
-    "df = pd.read_csv('data/GTD_2022.csv', low_memory = False)"
+    "df = pd.read_csv('../data/GTD_2022.csv', low_memory = False)"
    ]
   },
   {
