--- a/general/setUp.qmd
+++ b/general/setUp.qmd
@@ -39,12 +39,12 @@ We will use `Minconda` to handle our working environment. *Miniconda is a free m
 ## Start a Lab Session
 1. Download the Jupyter Notebook of the session in your folder. Choose one jupyter notebook and click "Dowload raw file" as shown below
 
-![Download raw file instruction](../img/raw.svg)
-
+<img src="../img/raw.png" width="70%">.
+ 
 2. Save the file in the `webmapping` folder on your machine, inside another folder called, for example `labs` or `notebooks`. Your `webmapping` folder should at least contain a `data` and a `labs` folder.
 3. Type in the search bar, find and open the `Anaconda Prompt (miniconda 3)`. 
-4. Write and run `conda activate envs456`
-5. Write and run `jupyter notebook`. This should open Jupyter Notebook in your default browser. Navigate to your course folder in and open the notebook downloaded in step 1. 
+4. Write and run `conda activate envs456`.
+5. Write and run `jupyter notebook`. This should open Jupyter Notebook in your default browser. Navigate to your course folder and open the notebook downloaded in step 1. 
 6. You can now work on your copy of the notebook.
 
 
