--- a/labs/w07_OSM.ipynb
+++ b/labs/w07_OSM.ipynb
@@ -797,7 +797,7 @@
     "\n",
     "Now, we have seen how to use some basic `osmnx` functions to obtain a graph representation of the street network. While this is simple and strightforward, I advise working on the street network represented as `geopandas.GeoDataFrame`s and `networkx` graphs. While at the beginning this may be more tedious, it also gives us much more control, both in terms of visualisation anad analysis depth. Before proceeding, it is important to keep in mind what type of graphs can be modelled through OSMNx and NetworkX, and what that means for the infrastructure we are modelling.\n",
     "\n",
-    "<img src=\"../img/graph_types.png\"  width=\"70%\">\n",
+    "<img src=\"../lab_img/graph_types.png\"  width=\"70%\">\n",
     "\n",
     "Have a look at NetworkX [documentation](https://networkx.org/documentation/stable/reference/classes/index.html) for details.\n",
     "\n",
