--- a/labs/w03_webArch.ipynb
+++ b/labs/w03_webArch.ipynb
@@ -44,16 +44,16 @@
     "\n",
     "**Consider a simple Google search:**\n",
     "\n",
-    "<img src=\"../img/google.png\" width=\"70%\">\n",
+    "<img src=\"../lab_img/google.png\" width=\"70%\">\n",
     "\n",
     "Ever wonder what all that extra stuff in the address bar was all about? In this case, the full address is Google's way of sending a query to its\n",
     "databases requesting information related to the search term *liverpool top attractions*.\n",
     "\n",
-    "<img src=\"../img/liv_attractions.png\" width=\"70%\">\n",
+    "<img src=\"../lab_img/liv_attractions.png\" width=\"70%\">\n",
     "\n",
     "In fact, it looks like Google makes its query by taking the search terms, separating each of them with a **+**, and appending them to the link <https://www.google.com/#q=>. Therefore, we should be able to actually change our Google search by adding some terms to the URL:\n",
     "\n",
-    "<img src=\"../img/beatles.png\" width=\"70%\">\n",
+    "<img src=\"../lab_img/beatles.png\" width=\"70%\">\n",
     "\n",
     "Learning how to use RESTful APIs is all about learning how to format these URLs so that you can get the response you want.\n",
     "\n",
