--- a/labs/w04_dataArch.ipynb
+++ b/labs/w04_dataArch.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "In there, we will create together a small example to better understand the building blocks of this file format.\n",
     "\n",
-    "<img src=\"../lab_img/geojson.png\" width=\"80%\">\n",
+    "<img src=\"../labs_img/geojson.png\" width=\"80%\">\n",
     "\n",
     "We will pay special attention to the following aspects:\n",
     "\n",
@@ -373,19 +373,19 @@
     "- Navigate to Mapbox Studio.\n",
     "- Start a New Style and chose a template (Monochrome, blank etc.)\n",
     "  \n",
-    "<img src=\"../lab_img/mapboxstyles.png\" width=\"80%\">\n",
+    "<img src=\"../labs_img/mapboxstyles.png\" width=\"80%\">\n",
     "\n",
     "- Upload the `liverpool.mbtiles` (if you created it) or the `liverpool.geojson`. Press the **+** symbol, `Custom Layer` or `Data Visualisation`, `Upload Data`, and choose your file\n",
     "  \n",
-    "<img src=\"../lab_img/mapbox_upload.png\" width=\"80%\">\n",
+    "<img src=\"../labs_img/mapbox_upload.png\" width=\"80%\">\n",
     "\n",
     "- Once uploaded, you should see your layer in the existing sources. \n",
     "\n",
-    "<img src=\"../lab_img/mapbox_select.png\" width=\"80%\">\n",
+    "<img src=\"../labs_img/mapbox_select.png\" width=\"80%\">\n",
     "\n",
     "- Style it according to your requirements: It should look like a nicer version of this:\n",
     "  \n",
-    "<img src=\"../lab_img/mapbox_building_studio.png\" width=\"80%\">\n",
+    "<img src=\"../labs_img/mapbox_building_studio.png\" width=\"80%\">\n",
     "\n",
     "Or through *scripting* with Mapbox's Uploads API (see above)"
    ]
@@ -405,7 +405,7 @@
    "source": [
     "First we need to get the `id` of your Mapbox style by copying its url:\n",
     "\n",
-    "<img src=\"../lab_img/mapbox_styleid.png\" width=\"80%\">"
+    "<img src=\"../labs_img/mapbox_styleid.png\" width=\"80%\">"
    ]
   },
   {
