--- a/labs/w01_intro.ipynb
+++ b/labs/w01_intro.ipynb
@@ -57,7 +57,7 @@
     "#### Example\n",
     "The project \"WHO Coronavirus (COVID-19) Dashboard\"\n",
     "\n",
-    "<img src=\"../lab_img/who_covid.png\" width = 70%/>\n",
+    "<img src=\"../labs_img/who_covid.png\" width = 70%/>\n",
     "\n",
     "-   **Substantive**\n",
     "\n",
@@ -4959,7 +4959,7 @@
     "\n",
     "Spatial **vector** data can consist of different types, and the 3 fundamental types are:\n",
     "\n",
-    "<img src=\"../lab_img/simple_features_3_text.svg\" width=\"70%\">\n",
+    "<img src=\"../labs_img/simple_features_3_text.svg\" width=\"70%\">\n",
     "\n",
     "* **Point** data: represents a single point in space.\n",
     "* **Line** data (\"LineString\"): represents a sequence of points that form a line.\n",
@@ -5820,7 +5820,7 @@
     "Although the earth is a globe, in practice we usually represent it on a flat surface: think about a physical map, or the figures we have made with Python on our computer screen.\n",
     "Going from the globe to a flat map is what we call a *projection*.\n",
     "\n",
-    "<img src=\"../lab_img/projection.png\" width = 70%>\n",
+    "<img src=\"../labs_img/projection.png\" width = 70%>\n",
     "\n",
     "We project the surface of the earth onto a 2D plane so we can express locations in cartesian x and y coordinates, on a flat surface. In this plane, we then typically work with a length unit such as meters instead of degrees, which makes the analysis more convenient and effective.\n",
     "\n",
@@ -5829,11 +5829,11 @@
     "Some projection systems will try to preserve the area size of geometries, such as the Albers Equal Area projection. Other projection systems try to preserve angles, such as the Mercator projection, but will see big distortions in the area. Every projection system will always have some distortion of area, angle or distance.\n",
     "\n",
     "<table><tr>\n",
-    "<td> <img src=\"../lab_img/projections-AlbersEqualArea.png\"> </td>\n",
-    "<td> <img src=\"../lab_img/projections-Mercator.png\"> </td>\n",
+    "<td> <img src=\"../labs_img/projections-AlbersEqualArea.png\"> </td>\n",
+    "<td> <img src=\"../labs_img/projections-Mercator.png\"> </td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td> <img src=\"../lab_img/projections-Robinson.png\"> </td>\n",
+    "<td> <img src=\"../labs_img/projections-Robinson.png\"> </td>\n",
     "</tr></table>"
    ]
   },
@@ -5843,7 +5843,7 @@
    "metadata": {},
    "source": [
     "**Projected size vs actual size (Mercator projection)**:\n",
-    "<img src=\"../lab_img/mercator_projection_area.gif\">"
+    "<img src=\"../labs_img/mercator_projection_area.gif\">"
    ]
   },
   {
