--- a/general/pythonwin.qmd
+++ b/general/pythonwin.qmd
@@ -1,15 +1,4 @@
-﻿
-
-Follow these instructions and test your installation **prior to the first Lab Session** (Wed, 31st of January). If you experience any issues, write a message on the Ms Teams channel of the module.
-Setting up the Python environment is necessary for:
-
-- Executing the [Jupyter Notebooks](https://docs.jupyter.org/en/latest/) of the Lab sessions of the course.
-- Preparing your own Jupyter Notebooks for the assignments (one each).
-
-# Setting up the Working Environment {.unnumbered}
-
-## Install Miniconda (and Python)
-We will use `Minconda` to handle our working environment. *Miniconda is a free minimal installer for conda. It is a small bootstrap version of Anaconda that includes only conda, Python, the packages they both depend on, and a small number of other useful packages (like pip, zlib, and a few others)*
+﻿# Install Miniconda (and Python) in Windows {.unnumbered}
 
 1. Install Miniconda:
 	- *Option 1*: On a UoL Machine: Download and install Miniconda from [here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe). This will install Miniconda and Python in `C:\`. If this process is aborted because it requires administrator rights, press `Start`, select `Install University Applications`, type and choose `Miniconda`.
@@ -29,15 +18,18 @@ We will use `Minconda` to handle our working environment. *Miniconda is a free m
 
 The folder structure should look like:
 
+```
 envs456/
 ├── data/
 ├── labs_img/
 └── labs/
-
+```
 
 ## Set up the Python Environment
 1. Type in the search bar and find the `Anaconda Prompt (miniconda 3)`. Launch it. The terminal should appear.
-<img source = "../img/anaconda_windows.png">
+
+<img src = "../img/anaconda_windows.png" width="100%">
+
 2. Download the file [envs456.yml](https://github.com/GDSL-UL/wma/blob/main/envs456.yml) in the folder `envs456`
 3. In the **Anaconda Terminal** write  `conda env create -n envs456 --file C:\envs456\envs456.yml` and press `Enter`; if the file is located elsewhere you'll need to use the corresponding file path.
 4. If you are prompted any questions, press `y`. This process will install all the packages necessary to carry out the lab sessions.
@@ -45,20 +37,22 @@ envs456/
 6.  *Optional*: Configuration of Jupyter Notebooks
 	- In the **Anaconda Terminal**, write `jupyter server --generate-config` and press enter. This, at least in Windows, should create a file to: `C:\Users\username\.jupyter\jupyter_server_config.py`.
 	- Open the file with a text editor (e.g. [Notepad++](https://notepad-plus-plus.org)), do a  `ctrl-f`  search for:  `c.ServerApp.root_dir`, uncomment it by removing the and change it to  `c.ServerApp.notebook_dir = 'C:\\your\\new\\path`, for example the directory where you created the `envs456` folder. In the University Machines, it is advised to work on the directory `M:\`. 
-<img source = "../img/config.png">
+
+<img src = "../img/config.png">
+	
 	- Save the file and close it.
 
 ## Start a Lab Session
 1. Download the Jupyter Notebook of the session in your folder. Choose one jupyter notebook and click "Dowload raw file" as shown below
 
-<img source = "../img/raw.png">
+<img src = "../img/raw.png" width="100%">
 
 2. Save the file in the `labs` folder within your `envs456` folder on your machine.
 3. Type in the search bar, find and open the `Anaconda Prompt (miniconda 3)`. 
 4. In the **Anaconda Terminal** write and run `conda activate envs456`.
 5. In the **Anaconda Terminal** write and run `jupyter notebook`. This should open Jupyter Notebook in your default browser. 
 
-<img source = "../img/jupyter.png">
+<img src = "../img/jupyter.png" width="100%">
 
 6. Navigate to your course folder in and double click on the notebook downloaded in step 1. 
 7. You can now work on your copy of the notebook.
